<resources>
    <string name="app_name">Mascotas</string>
    <string name="dog1">Sam</string>
    <string name="dog3">nando4395</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_acerca">Acerca de</string>
    <string name="contactenos">Contactenos</string>
    <string name="nombre">Nombre Completo</string>
    <string name="email">Email</string>
    <string name="descripcion">Descripción</string>
    <string name="enviar_comentario">Enviar Comentario</string>
    <string name="acerca_de_mi">Fernando Rojas Hidalgo</string>
    <string name="acerca_de_lugar">San Jose, Costa Rica</string>
    <string name="acerca_de_telefono">Teléfono (506)8815-4447</string>
    <string name="coursera">Coursera.org</string>
    <string name="cero_likes">0 Likes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="configurar_cuenta">Configurar Cuenta</string>
    <string name="Mascotapp">MascotAPP</string>
    <string name="cuenta">Escribe tu usuario</string>
    <string name="guardar_cuenta">Crear Cuenta</string>
    <string name="recibir_notificaciones">Recibir Notificaciones</string>
</resources>
