<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="net.rohisa.mascotas.MainActivity">

    <include
        android:id="@+id/miActionBar"
        layout="@layout/actionbar"></include>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/right">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:paddingTop="@dimen/left"
            android:inputType="textMultiLine"
            android:text="@string/acerca_de_mi"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:paddingTop="@dimen/left"
            android:inputType="textMultiLine"
            android:text="@string/acerca_de_lugar"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:paddingTop="@dimen/left"
            android:inputType="textMultiLine"
            android:text="@string/acerca_de_telefono"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:paddingTop="@dimen/left"
            android:inputType="textMultiLine"
            android:text="@string/coursera"
            android:textAlignment="center" />
    </android.support.design.widget.TextInputLayout>


</LinearLayout>