<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="net.rohisa.mascotas.CuentaActivity">

<include
    android:id="@+id/miActionBar"
    layout="@layout/actionbar"></include>


<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="@dimen/right">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left"
        android:paddingTop="@dimen/left"
        android:text="@string/Mascotapp"
        android:textAlignment="center" />
</android.support.design.widget.TextInputLayout>


<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="@dimen/right">

    <EditText
        android:id="@+id/etCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left"
        android:hint="@string/cuenta" />
</android.support.design.widget.TextInputLayout>



<Button
    android:id="@+id/btnGuardar"
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="200dp"
    android:layout_height="wrap_content"
    android:text="@string/guardar_cuenta"
    android:onClick="GuardarCuenta"/>

</LinearLayout>
